force-app/main/default/objects/OrgSync_Mule_Errors__c/OrgSync_Mule_Errors__c.object-meta.xml
<CustomObject>
    <label>OrgSync Mule Error</label>
    <nameField>
        <displayFormat>OME-{000000}</displayFormat>
        <label>OrgSync Mule Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrgSync Mule Error</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>