force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_ErrorId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ErrorId__c</fullName>
    <description>Error ID from the database</description>
    <externalId>true</externalId>
    <label>Error Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>