force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_ErrorText__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ErrorText__c</fullName>
    <description>Error text message</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>