force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_ParentRecordId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ParentRecordId__c</fullName>
    <description>Parent record ID associated with the error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>