force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_Payload__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payload data from the error record</inlineHelpText>
    <label>PayLoad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>