force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_RecordId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_RecordId__c</fullName>
    <description>Record ID associated with the error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>