force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_RetryCount__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_RetryCount__c</fullName>
    <description>Number of retry attempts for the error</description>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>