force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_ServiceName__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_ServiceName__c</fullName>
    <description>Name of the service that generated the error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>