force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_Status__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_Status__c</fullName>
    <description>Status of the error record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>