force-app/main/default/objects/OrgSync_Mule_Errors__c/fields/OrgSync_VmProcessId__c.field-meta.xml
<CustomField>
    <fullName>OrgSync_VmProcessId__c</fullName>
    <description>VM Process ID associated with the error</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vm Process Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>